{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 24,
  "lineage": "5fcff442-0288-a0b6-6c98-63874e1ff3f9",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0252c7fc94eaa551a",
            "association_id": "eipassoc-0659bb36659bd2afb",
            "domain": "vpc",
            "id": "eipalloc-0252c7fc94eaa551a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a88a2f5b25a06a52",
            "private_dns": "ip-10-0-0-46.ec2.internal",
            "private_ip": "10.0.0.46",
            "public_dns": "ec2-44-217-211-166.compute-1.amazonaws.com",
            "public_ip": "44.217.211.166",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_subnet.pub-subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0991a8acd0ec20f4e",
            "association_id": "eipassoc-01d75e96eecd575ff",
            "domain": "vpc",
            "id": "eipalloc-0991a8acd0ec20f4e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b5f501988e89f272",
            "private_dns": "ip-10-0-2-112.ec2.internal",
            "private_ip": "10.0.2.112",
            "public_dns": "ec2-54-196-97-203.compute-1.amazonaws.com",
            "public_ip": "54.196.97.203",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_subnet.pub-subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407597173222:internet-gateway/igw-0881e66ce022a104b",
            "id": "igw-0881e66ce022a104b",
            "owner_id": "407597173222",
            "vpc_id": "vpc-05ba7bf5446763355"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0252c7fc94eaa551a",
            "association_id": "eipassoc-0659bb36659bd2afb",
            "connectivity_type": "public",
            "id": "nat-0de05cabdabace5f5",
            "network_interface_id": "eni-0a88a2f5b25a06a52",
            "private_ip": "10.0.0.46",
            "public_ip": "44.217.211.166",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c32a520b952dc688",
            "tags": {
              "Name": "NATGAteway-1"
            },
            "tags_all": {
              "Name": "NATGAteway-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.my_eip",
            "module.vpc.aws_subnet.pub-subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0991a8acd0ec20f4e",
            "association_id": "eipassoc-01d75e96eecd575ff",
            "connectivity_type": "public",
            "id": "nat-060e582bab23af6b3",
            "network_interface_id": "eni-0b5f501988e89f272",
            "private_ip": "10.0.2.112",
            "public_ip": "54.196.97.203",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c8ac7d8a93ec63c6",
            "tags": {
              "Name": "NATGAteway-2"
            },
            "tags_all": {
              "Name": "NATGAteway-2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.my_eip",
            "module.vpc.aws_subnet.pub-subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407597173222:route-table/rtb-0f73ffb891d31eee4",
            "id": "rtb-0f73ffb891d31eee4",
            "owner_id": "407597173222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0de05cabdabace5f5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05ba7bf5446763355"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.my_eip",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.pub-subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407597173222:route-table/rtb-04525189fdc49f404",
            "id": "rtb-04525189fdc49f404",
            "owner_id": "407597173222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-060e582bab23af6b3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05ba7bf5446763355"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.my_eip",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.pub-subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407597173222:route-table/rtb-071e0bd96c4f61ae0",
            "id": "rtb-071e0bd96c4f61ae0",
            "owner_id": "407597173222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0881e66ce022a104b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05ba7bf5446763355"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8ca650033274e57",
            "route_table_id": "rtb-0f73ffb891d31eee4",
            "subnet_id": "subnet-06fe87e77ccfe4dde"
          },
          "dependencies": [
            "module.vpc.aws_eip.my_eip",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.priv-route-table",
            "module.vpc.aws_subnet.priv-subnets",
            "module.vpc.aws_subnet.pub-subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072583995145d7fb2",
            "route_table_id": "rtb-04525189fdc49f404",
            "subnet_id": "subnet-06c5593c9439578c3"
          },
          "dependencies": [
            "module.vpc.aws_eip.my_eip",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.priv-route-table",
            "module.vpc.aws_subnet.priv-subnets",
            "module.vpc.aws_subnet.pub-subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0e3995e0c187e49",
            "route_table_id": "rtb-071e0bd96c4f61ae0",
            "subnet_id": "subnet-0c32a520b952dc688"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub-route-table",
            "module.vpc.aws_subnet.pub-subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0566b650744527d39",
            "route_table_id": "rtb-071e0bd96c4f61ae0",
            "subnet_id": "subnet-0c8ac7d8a93ec63c6"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub-route-table",
            "module.vpc.aws_subnet.pub-subnets",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-subnet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407597173222:subnet/subnet-06fe87e77ccfe4dde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fe87e77ccfe4dde",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "407597173222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1",
              "kubernetes.io/cluster/private_eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-subnet-1",
              "kubernetes.io/cluster/private_eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05ba7bf5446763355"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "private-subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407597173222:subnet/subnet-06c5593c9439578c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c5593c9439578c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "407597173222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2",
              "kubernetes.io/cluster/private_eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-subnet-2",
              "kubernetes.io/cluster/private_eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05ba7bf5446763355"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-subnet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407597173222:subnet/subnet-0c32a520b952dc688",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c32a520b952dc688",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "407597173222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1",
              "kubernetes.io/cluster/private_eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-1",
              "kubernetes.io/cluster/private_eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05ba7bf5446763355"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": "public-subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407597173222:subnet/subnet-0c8ac7d8a93ec63c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8ac7d8a93ec63c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "407597173222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2",
              "kubernetes.io/cluster/private_eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-2",
              "kubernetes.io/cluster/private_eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05ba7bf5446763355"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:407597173222:vpc/vpc-05ba7bf5446763355",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0630ce9b8e54aa742",
            "default_route_table_id": "rtb-044295955c2bebf0f",
            "default_security_group_id": "sg-03ff8cb801fbaa708",
            "dhcp_options_id": "dopt-09cabc911d2f30763",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05ba7bf5446763355",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-044295955c2bebf0f",
            "owner_id": "407597173222"
          }
        }
      ]
    }
  ]
}